--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "devicon": "^2.17.0",
     "motion": "^12.29.2",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
