--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "devicon": "^2.17.0",
     "dotenv": "^17.2.3",
     "motion": "^12.29.2",
