--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: "10 23 * * *" # Runs daily at 23:10 UTC (1:10 AM Helsinki/EET)
+    - cron: "30 23 * * *"
   workflow_dispatch:
 
 jobs:
