--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: "30 23 * * *"
+    - cron: "00 22 * * *"
   workflow_dispatch:
 
 jobs:
@@ -23,8 +23,8 @@ jobs:
         run: npx playwright install --with-deps chromium
       - name: Run Playwright tests
         env:
-          # If running on schedule, target production. Otherwise (Push/PR), specific BASE_URL is undefined -> defaults to localhost (mocked).
-          BASE_URL: ${{ github.event_name == 'schedule' && 'https://uygarpolat.com' || '' }}
+          # If running on schedule OR manually, target production. Otherwise (Push/PR), defaults to localhost (mocked).
+          BASE_URL: ${{ (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') && 'https://uygarpolat.com' || '' }}
         run: npx playwright test
       - uses: actions/upload-artifact@v4
         if: always()
